// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StaticLayoutSnap > should render correctly with modal 1`] = `
<div
  className="sc-aXZVg iQWtQB"
  data-mocked="Box"
>
  <div
    className="sc-gsFSXq irdOli"
  >
    modalContent
  </div>
  <div
    className="sc-gEvEer deMTkg"
    data-mocked="Box"
  >
    header
  </div>
  <div
    className="sc-eqUAAy lplIYk"
    data-mocked="Box"
  >
    <div
      className="sc-kAyceB cHqwUn"
      data-mocked="Box"
      isFloating={false}
    >
      leftPanel
    </div>
    <div
      className="sc-fqkvVR hhwHuy"
      data-mocked="Box"
    >
      <div
        className="sc-iGgWBj hzaGuy"
        data-mocked="Box"
      >
        mainContent
      </div>
    </div>
    <div
      className="sc-imWYAI eUyaSV"
      data-mocked="Box"
    >
      rightPanel
    </div>
  </div>
  <div
    className="sc-jXbUNg errLgn"
    data-mocked="Box"
  >
    footer
  </div>
</div>
`;

exports[`StaticLayoutSnap > should render correctly with topBar 1`] = `
<div
  className="sc-aXZVg iQWtQB"
  data-mocked="Box"
>
  <div
    className="sc-gEvEer deMTkg"
    data-mocked="Box"
  >
    header
  </div>
  <div
    className="sc-eqUAAy lplIYk"
    data-mocked="Box"
  >
    <div
      className="sc-kAyceB cHqwUn"
      data-mocked="Box"
      isFloating={false}
    >
      leftPanel
    </div>
    <div
      className="sc-fqkvVR hhwHuy"
      data-mocked="Box"
    >
      <div
        className="sc-dcJsrY cvpwOE"
        data-mocked="Box"
        padding="xxs"
      >
        topBar
      </div>
      <div
        className="sc-iGgWBj hzaGuy"
        data-mocked="Box"
      >
        mainContent
      </div>
    </div>
    <div
      className="sc-imWYAI eUyaSV"
      data-mocked="Box"
    >
      rightPanel
    </div>
  </div>
  <div
    className="sc-jXbUNg errLgn"
    data-mocked="Box"
  >
    footer
  </div>
</div>
`;

exports[`StaticLayoutSnap > should render correctly without modal 1`] = `
<div
  className="sc-aXZVg iQWtQB"
  data-mocked="Box"
>
  <div
    className="sc-gEvEer deMTkg"
    data-mocked="Box"
  >
    header
  </div>
  <div
    className="sc-eqUAAy lplIYk"
    data-mocked="Box"
  >
    <div
      className="sc-kAyceB cHqwUn"
      data-mocked="Box"
      isFloating={false}
    >
      leftPanel
    </div>
    <div
      className="sc-fqkvVR hhwHuy"
      data-mocked="Box"
    >
      <div
        className="sc-iGgWBj hzaGuy"
        data-mocked="Box"
      >
        mainContent
      </div>
    </div>
    <div
      className="sc-imWYAI eUyaSV"
      data-mocked="Box"
    >
      rightPanel
    </div>
  </div>
  <div
    className="sc-jXbUNg errLgn"
    data-mocked="Box"
  >
    footer
  </div>
</div>
`;
